commenting out flatten versions through GUI until script can be fixed

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -263,17 +263,17 @@
 				"function() {" + 
 				"DesktopContent.XMLHttpRequest(\"Request?RequestType=versionTracking&Type=ON\",\"\",versionTrackingHandler);" +
 				"},0,\"#efeaea\",0,\"#770000\");" +
-				"'>Turn Version Tracking OFF</a>." +
+				"'>Turn Version Tracking OFF</a>." //+
 				//Flatten Versions
-				"<br>" +
-				"Click here to " +
-				"<a href='#' onclick='javascript:" +
-				"DesktopContent.popUpVerification(" + 
-				"\"Are you sure you want to remove all unused groups and tables based on the currently active System Aliases?\", " +
-				"function() {" + 
-				"DesktopContent.XMLHttpRequest(\"Request?RequestType=flattenToSystemAliases\");" +
-				"},0,\"#efeaea\",0,\"#770000\");" +
-				"'>Flatten to System Aliases</a>."
+//				"<br>" +
+//				"Click here to " +
+//				"<a href='#' onclick='javascript:" +
+//				"DesktopContent.popUpVerification(" + 
+//				"\"Are you sure you want to remove all unused groups and tables based on the currently active System Aliases?\", " +
+//				"function() {" + 
+//				"DesktopContent.XMLHttpRequest(\"Request?RequestType=flattenToSystemAliases\");" +
+//				"},0,\"#efeaea\",0,\"#770000\");" +
+//				"'>Flatten to System Aliases</a>."
 				;
 	
 		var _currentConfigName, _associatedGroupName, _associatedGroupKey;
