--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -7105,7 +7105,7 @@
 			var w = 380;
 			var h = 330;
 			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h-gh*2 /*h*/,
-					,undefined /*padding*/,undefined /*border*/,undefined /*margin*/,undefined /*doNotResize*/,
+					undefined /*padding*/,undefined /*border*/,undefined /*margin*/,undefined /*doNotResize*/,
 					gh*2 /*offsetUp*/);
 
 			//always
@@ -10956,7 +10956,7 @@
 			var w = 500;
 			var h = 395;
 			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/,
-					,undefined /*padding*/,undefined /*border*/,undefined /*margin*/,undefined /*doNotResize*/,
+					undefined /*padding*/,undefined /*border*/,undefined /*margin*/,undefined /*doNotResize*/,
 					gh*2 /*offsetUp*/);
 
 			
@@ -11293,7 +11293,7 @@
 			var w = 500;
 			var h = 335;
 			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h-gh*2 /*h*/,
-					,undefined /*padding*/,undefined /*border*/,undefined /*margin*/,undefined /*doNotResize*/,
+					undefined /*padding*/,undefined /*border*/,undefined /*margin*/,undefined /*doNotResize*/,
 					gh*2 /*offsetUp*/);
 
 			var str = "<br><a id='" + 
