--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -29,7 +29,8 @@
 		}
 
 		#topPane {
-			overflow: hidden;
+			overflow-y: auto;
+			overflow-x: hidden;
 		}
 		#leftPane {
 			/*background-color : rgb(241, 231, 231);*/
@@ -344,7 +345,7 @@
 			
 			Debug.log("paint w,h=" + w + "," +h);
 
-			var TOP_H = 50;
+			var TOP_H = 56;
 			var LEFT_W = 400;
 			var BORDER_SZ = 0;			
 			var MARGIN = 5;
