checking in minor changes before FY17-Q4 tag

--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -739,7 +739,7 @@
 						"' onclick='handlefixedChoiceArbitraryCheckbox(" + c + ",true)' " +
 						(colChoicesArr[0] == "arbitraryBool=0"?"checked":"") + //note arbitrary check is inverted compared to fixedChoice field
 						">";
-				str += "Force table link to one or many table(s):";
+				str += "Force table link to one or many table(s)<br>(Include 'NO_LINK' to allow disconnected links):";
 				str += "</input>";
 
 				str += "<br>";
