checkpoint in making of Iterate app

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -162,7 +162,7 @@
 		//		* Buttons at top and bottom: Read All, Write All, Read Selected, Write Selected.
 		//		
 		//	- Save functionality should be same as saving tree	
-		//		* If admin, give options to target a certain system alias.. Etc.
+		//		* TODO:: If admin, could give options to target a certain system alias.. Etc.
 		//		* Else assume saving to currently active groups
 
 		
