returning stable running for OT

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -565,7 +565,7 @@
 				
 					});
 			
-		}	//end getSubsetUIDs()
+		}	//end initSubsetGlobalData()
 		
 		//=====================================================================================
 		//createTopPaneContent ~~
