checkpoint developing Iterate app

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -197,7 +197,7 @@
 		var _editFieldIndex = -1;	
 		var _fields;
 		
-		//global vars saving tables
+		//global vars for saving tables
 		var _modifiedTables;
 		
 		/////////////////////////////////////////////////////////////////////////////////////////
@@ -372,13 +372,13 @@
 			
 			str += "<div id='recordDeleteDiv' class='treeNode-deleteIcon' ";
 			str += "onclick='deleteRecords(); return false;' " +
-					"title='Delete the selected one or many " + _recordsAlias + " records.\"'" +					
+					"title='Delete the selected one or many " + _recordsAlias + " records.'" +					
 					">";
 			str += "</div>";
 			
 			str += "<div id='recordAddDiv'>";
 			str += "<a class='recordAdd' onclick='addRecord(); return false;' " +
-					"title='Create a new " + _recordsAlias + " record.\"'" +
+					"title='Create a new " + _recordsAlias + " record.'" +
 					">";
 			str += "+";
 			str += "</a>";
