--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -158,7 +158,7 @@
 
 			#usersArea {
 				overflow-y: scroll;
-				overflow-x: hidden;					
+				overflow-x: auto;					
 			}
 
 			#usersArea::-webkit-scrollbar 
