changed default view for FSM to zoomed in

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -279,7 +279,7 @@
             	//getAltTransitionSelection(x,y)
             	//toggleViewMode()
             
-            var _altStateDrawingMode = true;
+            var _altStateDrawingMode = false;
             var _altStateGrid = [];
             var _altPlacedStates = [];
             var _ALT_GRID_WIDTH = 3;
